Utils day 복구